Rota profile para o candidato resgatar as informaçoes